@@ -1,8 +1,10 @@
 url;file;result;test
 -;-;-;freeRouter v22.5.19-cur, done by cs@nop.
--;-;-;2022-05-19 07:40:45, took 00:09:00, with 80 workers, on 2880 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2022-05-19 07:56:17, took 00:08:10, with 80 workers, on 2882 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
-http://sources.freertr.org/cfg/basic.tst;basic.tst;success;unnamed
+http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
+http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
+http://sources.freertr.org/cfg/basic03.tst;basic03.tst;success;subinterface with slot
 http://sources.freertr.org/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
 http://sources.freertr.org/cfg/conn-amt02.tst;conn-amt02.tst;success;amt over ipv6
 http://sources.freertr.org/cfg/conn-amt03.tst;conn-amt03.tst;success;amt over amt
