@@ -1,4 +1,6 @@
-qc pass: unnamed
+qc pass: dummy test
+qc pass: interface with slot
+qc pass: subinterface with slot
 qc pass: amt over ipv4
 qc pass: amt over ipv6
 qc pass: amt over amt
