@@ -12,11 +12,13 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.5.19-cur, done by cs@nop.<br/>
-tested: 2022-05-19 07:40:45, took 00:09:00, with 80 workers, on 2880 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2022-05-19 07:56:17, took 00:08:10, with 80 workers, on 2882 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
-<tr><td><a href="http://sources.freertr.org/cfg/basic.tst">basic.tst</a></td><td>success</td><td>unnamed</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/basic01.tst">basic01.tst</a></td><td>success</td><td>dummy test</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/basic02.tst">basic02.tst</a></td><td>success</td><td>interface with slot</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/basic03.tst">basic03.tst</a></td><td>success</td><td>subinterface with slot</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-amt01.tst">conn-amt01.tst</a></td><td>success</td><td>amt over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-amt02.tst">conn-amt02.tst</a></td><td>success</td><td>amt over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-amt03.tst">conn-amt03.tst</a></td><td>success</td><td>amt over amt</td></tr>
