@@ -13269,3 +13269,8 @@ qc pass: p4lang downlink
 ---------------------------------- 2022-05-19 07:31:45 22.5.19
 no qc pass: dummy test
 qc pass: unnamed
+---------------------------------- 2022-05-19 07:48:07 22.5.19
+no qc pass: unnamed
+qc pass: dummy test
+qc pass: interface with slot
+qc pass: subinterface with slot
